--- a/content/profile.yaml
+++ b/content/profile.yaml
@@ -20,7 +20,7 @@
     - Organización
   tools:
     - NodeJS & PHP
-    - Premiere & Lightroom
+    - Premiere Pro & Lightroom
     - VScode
   budget:
     currency: $
