add ojibwa as a example website

--- a/content/projects.yaml
+++ b/content/projects.yaml
@@ -1,6 +1,6 @@
-- name: Example 1
-  url: https://github.com
-  description: Override the digital divide with additional clickthroughs from DevOps. User generated content in real-time will have multiple touchpoints for offshoring.
+- name: Ojibwa
+  url: https://ojibwa.uy/
+  description: Sitio Web de Fotógrafo Profesional Maximiliano Echenique, esta integrado con cloudinary para organización y optimización de imágenes.
   status: in progress
   tags:
     - JavaScript
