--- a/content/profile.yaml
+++ b/content/profile.yaml
@@ -2,7 +2,7 @@
   initials: RM
   name: Renzo Mayer
   email: rnzmayer@gmail.com
-  profession: Web Developer & Photographer
+  profession: Desarrollador Web & Creador Audiovisual
   image: images/profile.jpg
   location: Montevideo, Uruguay
   relocation: true
