add more info and metadata

--- a/content/profile.yaml
+++ b/content/profile.yaml
@@ -16,7 +16,7 @@
     Actualmente me dedico a desarrollar, producir y comercializar productos digitales de alta calidad a precios competitivos.
   skills:
     - Creatividad
-    - Perseverancia
+    - Agilidad
     - Organización
   tools:
     - NodeJS & PHP
