some updates to metas and colors

--- a/content/work-history.yaml
+++ b/content/work-history.yaml
@@ -1,18 +1,13 @@
-- company: Atomic Studio
-  position: Senior Web Developer
-  period: January 2018 - present
-  url: https://atomic.studio
+- company: Yum que Rico!
+  position: Fotógrafo, Filmmaker & Web Developer
+  period: September 2019 - Present
+  url: https://www.instagram.com/yum.que.rico/
 
-- company: Atomic Studio
-  position: Web Developer
-  period: January 2014 - December 2017
-  url: https://atomic.studio
+- company: VIX Inc.
+  position: Development Team Lead
+  period: November 2014 - May 2019
+  url: https://www.vix.com/
 
-- company: WebConnect Agency
+- company: Chaising Group
   position: Junior Web Developer
-  period: November 2010 - December 2013
-  url:
-
-- company: Freelance
-  position: Web Developer
-  period: April 2008 - October 2010
+  period: March - October 2014
