--- a/content/social.yaml
+++ b/content/social.yaml
@@ -1,5 +1,5 @@
 - name: linkedin
-  url: https://linkedin.com/in/username
+  url: https://www.linkedin.com/in/renzo-mayer-breitkreitz/
 
 - name: twitter
   url: https://twitter.com/username
@@ -8,7 +8,7 @@
   url:
 
 - name: instagram
-  url:
+  url: https://www.instagram.com/renzombreit/
 
 - name: dribbble
   url:
