--- a/content/work-history.yaml
+++ b/content/work-history.yaml
@@ -1,13 +1,13 @@
-- company: Yum que Rico!
+- company: Freelance
   position: Fotógrafo, Filmmaker & Web Developer
-  period: September 2019 - Present
+  period: Septiembre 2019 - Presente
   url: https://www.instagram.com/yum.que.rico/
 
 - company: VIX Inc.
   position: Development Team Lead
-  period: November 2014 - May 2019
+  period: Noviembre 2014 - Mayo 2019
   url: https://www.vix.com/
 
 - company: Chaising Group
   position: Junior Web Developer
-  period: March - October 2014
+  period: Marzo - Octubre 2014
