--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "gatsby": "^2.24.15",
-    "my-intro": "https://github.com/renzit/my-intro.git",
+    "@wkocjan/gatsby-theme-intro": "1.0.11",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
