--- a/content/projects.yaml
+++ b/content/projects.yaml
@@ -24,4 +24,4 @@
     - JavaScript
     - HTML
   icon: website
-  image: images/project.jpg
+  image: images/proyecto-ojibwa-fotografo-profesional.jpg
