--- a/content/social.yaml
+++ b/content/social.yaml
@@ -2,7 +2,7 @@
   url: https://www.linkedin.com/in/renzo-mayer-breitkreitz/
 
 - name: twitter
-  url: https://twitter.com/username
+  url:
 
 - name: facebook
   url:
