--- a/content/profile.yaml
+++ b/content/profile.yaml
@@ -15,7 +15,7 @@
   skills:
     - Solución de problemas complejos
     - Pensamiento analítico
-    - Juego en equipo
+    - Juagador de equipo
   tools:
     - NodeJS & PHP
     - Premiere Pro & Lightroom
