--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "gatsby": "^2.24.15",
     "@wkocjan/gatsby-theme-intro": "1.0.11",
+    "gatsby": "^2.24.15",
+    "gatsby-plugin-google-tagmanager": "^2.3.11",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
