change node for js

--- a/content/profile.yaml
+++ b/content/profile.yaml
@@ -17,7 +17,7 @@
     - Pensamiento analítico
     - Juagador de equipo
   tools:
-    - NodeJS & PHP
+    - Javascript & PHP
     - Premiere Pro & Lightroom
   budget:
     currency: $
