--- a/content/profile.yaml
+++ b/content/profile.yaml
@@ -15,7 +15,7 @@
   skills:
     - Solución de problemas complejos
     - Pensamiento analítico
-    - Juagador de equipo
+    - Jugador de equipo
   tools:
     - Javascript & PHP
     - Premiere Pro & Lightroom
