update linkedin link

--- a/content/social.yaml
+++ b/content/social.yaml
@@ -1,5 +1,5 @@
 - name: linkedin
-  url: https://www.linkedin.com/in/renzo-mayer-breitkreitz/
+  url: https://www.linkedin.com/in/renzo-mayer/
 
 - name: twitter
   url:
