--- a/content/work-history-es.yaml
+++ b/content/work-history-es.yaml
@@ -1,10 +1,6 @@
 - company: Freelance
-  position: Web Developer
-  period: Septiembre 2019 - Present
-
-- company: Co-Founder Yum que rico!
-  position: Web Developer - Content Creation for Gastronomy
-  period: Septiembre 2019 - Present
+  position: Fotógrafo, Filmmaker & Web Developer
+  period: Septiembre 2019 - Presente
   url: https://www.instagram.com/yum.que.rico/
 
 - company: VIX Inc.
