--- a/.github/workflows/lighthouse-ci-action.yml
+++ b/.github/workflows/lighthouse-ci-action.yml
@@ -21,6 +21,7 @@ jobs:
       - id: test_var
         run: |
           lighhouseResult=`cat ${{ steps.lighthouse_audit.outputs.resultsPath }}/lhr-*.json`
+          urlTested = {{ steps.lighthouse_audit.outputs.manifest.url }}
           fcp=`echo FCP: $(jq -r '.audits["first-contentful-paint"].displayValue' <<< "$lighhouseResult")`
           lcp=`echo LCP $(jq -r '.audits["largest-contentful-paint"].displayValue' <<< "$lighhouseResult")`
           cls=`echo CLS $(jq -r '.audits["cumulative-layout-shift"].displayValue' <<< "$lighhouseResult")`
@@ -38,6 +39,7 @@ jobs:
           message+=$(printf '%s' "$cpu_idle")$separator
           message+=\"
           echo "::set-output name=message::$message"
+          echo "::set-output name=url::$urlTested"
           echo "$message"
       - name: Send slack notification
         uses: rtCamp/action-slack-notify@v2
@@ -45,7 +47,7 @@ jobs:
         env:
           SLACK_CHANNEL: integracion
           SLACK_COLOR: ${{ job.status }}
-          SLACK_TITLE: ":zap: Web Performance for guides"
+          SLACK_TITLE: ":zap: Web Performance for [Guides](${{steps.test_var.outputs.url}})"
           SLACK_MESSAGE: ${{steps.test_var.outputs.message}}
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_FOOTER: "Powered by Alfred bot"
