--- a/.github/workflows/lighthouse-ci-action.yml
+++ b/.github/workflows/lighthouse-ci-action.yml
@@ -23,7 +23,7 @@ jobs:
           lighhouseResult=`cat ${{ steps.lighthouse_audit.outputs.resultsPath }}/lhr-*.json`
           urlTested=${{ steps.lighthouse_audit.outputs.manifest }}
           echo $urlTested
-          urlLink=`(jq -r '.url' <<< "$urlTested")`
+          urlLink=`(jq -r '[0].url' <<< "$urlTested")`
           fcp=`echo FCP: $(jq -r '.audits["first-contentful-paint"].displayValue' <<< "$lighhouseResult")`
           lcp=`echo LCP $(jq -r '.audits["largest-contentful-paint"].displayValue' <<< "$lighhouseResult")`
           cls=`echo CLS $(jq -r '.audits["cumulative-layout-shift"].displayValue' <<< "$lighhouseResult")`
