--- a/.github/workflows/lighthouse-ci-action.yml
+++ b/.github/workflows/lighthouse-ci-action.yml
@@ -21,9 +21,6 @@ jobs:
       - id: test_var
         run: |
           lighhouseResult=`cat ${{ steps.lighthouse_audit.outputs.resultsPath }}/lhr-*.json`
-          urlTested=${{ steps.lighthouse_audit.outputs.manifest }}
-          echo $urlTested
-          urlLink=`(jq -r '[0].url' <<< "$urlTested")`
           fcp=`echo FCP: $(jq -r '.audits["first-contentful-paint"].displayValue' <<< "$lighhouseResult")`
           lcp=`echo LCP $(jq -r '.audits["largest-contentful-paint"].displayValue' <<< "$lighhouseResult")`
           cls=`echo CLS $(jq -r '.audits["cumulative-layout-shift"].displayValue' <<< "$lighhouseResult")`
@@ -41,8 +38,11 @@ jobs:
           message+=$(printf '%s' "$cpu_idle")$separator
           message+=\"
           echo "::set-output name=message::$message"
-          echo "::set-output name=url::$urlLink"
           echo "$message"
+        script: |
+          const url_tested = ${{ steps.lighthouse_audit.outputs.manifest }}[0].url;
+          console.log({ url_tested })
+          core.setOutput("url", url_tested);
       - name: Send slack notification
         uses: rtCamp/action-slack-notify@v2
         if: ${{ always() }}
