--- a/.github/workflows/lighthouse-ci-action.yml
+++ b/.github/workflows/lighthouse-ci-action.yml
@@ -41,10 +41,11 @@ jobs:
           echo "$message"
       - id: format_lighthouse_score
         uses: actions/github-script@v3
-        script: |
-          const url_tested = ${{ steps.lighthouse_audit.outputs.manifest }}[0].url;
-          console.log({ url_tested })
-          core.setOutput("url", url_tested);
+        with:
+          script: |
+            const url_tested = ${{ steps.lighthouse_audit.outputs.manifest }}[0].url;
+            console.log({ url_tested })
+            core.setOutput("url", url_tested);
       - name: Send slack notification
         uses: rtCamp/action-slack-notify@v2
         if: ${{ always() }}
