--- a/.github/workflows/lighthouse-ci-action.yml
+++ b/.github/workflows/lighthouse-ci-action.yml
@@ -52,7 +52,7 @@ jobs:
         env:
           SLACK_CHANNEL: integracion
           SLACK_COLOR: ${{ job.status }}
-          SLACK_TITLE: ":zap: Web Performance for [${{ github.event.repository.name }}](${{steps.format_lighthouse_score.outputs.url}})"
+          SLACK_TITLE: ":zap: Web Performance for <${{ github.event.repository.name }}|${{steps.format_lighthouse_score.outputs.url}}>"
           SLACK_MESSAGE: ${{steps.test_var.outputs.message}}
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_FOOTER: "Powered by Alfred bot"
