--- a/.github/workflows/lighthouse-ci-action.yml
+++ b/.github/workflows/lighthouse-ci-action.yml
@@ -52,8 +52,8 @@ jobs:
         env:
           SLACK_CHANNEL: integracion
           SLACK_COLOR: ${{ job.status }}
-          SLACK_TITLE: ":zap: Web Performance for < ${{steps.format_lighthouse_score.outputs.url}} >"
+          SLACK_TITLE: ":zap: Web Performance for <${{steps.format_lighthouse_score.outputs.url}}|${{ github.event.repository.name }}>"
           SLACK_MESSAGE: ${{steps.test_var.outputs.message}}
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-          SLACK_FOOTER: "Powered by Alfred bot [Hola](www.google.com) <hola|www.google.com> <www.google.com|hola>"
+          SLACK_FOOTER: "Powered by Alfred bot <www.google.com|hola>"
           MSG_MINIMAL: true
