--- a/.github/workflows/lighthouse-ci-action.yml
+++ b/.github/workflows/lighthouse-ci-action.yml
@@ -52,7 +52,7 @@ jobs:
         env:
           SLACK_CHANNEL: integracion
           SLACK_COLOR: ${{ job.status }}
-          SLACK_TITLE: ":zap: Web Performance"
+          SLACK_TITLE: ":zap: Web Performance ${{ github.event.repository.name }}>"
           SLACK_MESSAGE: ${{steps.test_var.outputs.message}}
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_FOOTER: "Powered by Alfred bot <www.google.com|hola>"
